Create process item 'Call_Spark_Job' at path '' in project 'oodle_git'     Delete items...       Delete (physical) process item 'Oodle_Data_Flow' at path '' in project 'oodle_git'         Save project 'oodle_git'

--- a/OODLE_GIT/talend.project
+++ b/OODLE_GIT/talend.project
@@ -82,33 +82,6 @@
         <elementParameter xmi:id="_x4tzNJ7fEeeE5por0IoA7Q" field="TECHNICAL" name="PROPERTY_TYPE_IMPLICIT_CONTEXT:REPOSITORY_PROPERTY_TYPE" value="" contextMode="false"/>
       </parameters>
     </implicitContextSettings>
-    <ItemsRelations xmi:id="_x6sI4J7fEeeE5por0IoA7Q">
-      <baseItem xmi:id="_x6sI4Z7fEeeE5por0IoA7Q" id="_a4XTsJ2VEeepddv4c48Ucw" version="0.1" type="job"/>
-      <relatedItems xmi:id="_x6sI4p7fEeeE5por0IoA7Q" id="_xF2QYJwSEeevSfDK6QoZaQ" version="Latest" type="context"/>
-      <relatedItems xmi:id="_x6sI457fEeeE5por0IoA7Q" id="_Ihes4J2eEeepddv4c48Ucw" version="Latest" type="context"/>
-      <relatedItems xmi:id="_x6sI5J7fEeeE5por0IoA7Q" id="_XElGYJEbEee8WO8wvmXhvw" version="Latest" type="context"/>
-      <relatedItems xmi:id="_x6sI5Z7fEeeE5por0IoA7Q" id="_eJ_tcJ2eEeepddv4c48Ucw" version="Latest" type="context"/>
-      <relatedItems xmi:id="_x6sI557fEeeE5por0IoA7Q" id="_d_dAcJ2VEeepddv4c48Ucw" version="Latest" type="job"/>
-      <relatedItems xmi:id="_x6sI6J7fEeeE5por0IoA7Q" id="SQLike" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_x6sI6Z7fEeeE5por0IoA7Q" id="Numeric" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_x6sI6p7fEeeE5por0IoA7Q" id="TalendString" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_x6sI657fEeeE5por0IoA7Q" id="DataMasking" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_x6sI7J7fEeeE5por0IoA7Q" id="ImporttweetsTstandardizerow_1" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_x6sI7Z7fEeeE5por0IoA7Q" id="DataOperation" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_x6sI7p7fEeeE5por0IoA7Q" id="DqStringHandling" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_x6sI757fEeeE5por0IoA7Q" id="StringHandling" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_x6sI8J7fEeeE5por0IoA7Q" id="TalendDataGenerator" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_x6sI8Z7fEeeE5por0IoA7Q" id="TalendDate" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_x6sI8p7fEeeE5por0IoA7Q" id="DataQuality" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_x6sI857fEeeE5por0IoA7Q" id="Tweets_Generator" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_x6sI9J7fEeeE5por0IoA7Q" id="Mathematical" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_x6sI9Z7fEeeE5por0IoA7Q" id="Relational" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_x6sI9p7fEeeE5por0IoA7Q" id="DQTechnical" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_x6sI957fEeeE5por0IoA7Q" id="DataQualityDependencies" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_x6sI-J7fEeeE5por0IoA7Q" id="MDM" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_x6sI-Z7fEeeE5por0IoA7Q" id="Importtweets_deployTstandardizerow_1" version="Latest" type="routine"/>
-      <relatedItems xmi:id="__10qIKIYEeewh9d2QGnGHQ" id="_a4XTsZ2VEeepddv4c48Ucw" version="0.1" type="job"/>
-    </ItemsRelations>
     <ItemsRelations xmi:id="_x6sI-p7fEeeE5por0IoA7Q">
       <baseItem xmi:id="_x6sI-57fEeeE5por0IoA7Q" id="_a4XTsZ2VEeepddv4c48Ucw" version="0.1" type="job"/>
       <relatedItems xmi:id="_x6sI_J7fEeeE5por0IoA7Q" id="_xF2QYJwSEeevSfDK6QoZaQ" version="Latest" type="context"/>
@@ -253,6 +226,32 @@
       <relatedItems xmi:id="_-sC0E6LbEees8enMvX5q-w" id="Importtweets_deployTstandardizerow_1" version="Latest" type="routine"/>
       <relatedItems xmi:id="_S_mz0KLcEees8enMvX5q-w" id="_7_FyEKJ5Eee2eumRGMQQBw" version="Latest" type="property"/>
       <relatedItems xmi:id="_S_mz0aLcEees8enMvX5q-w" id="_zOshYJtQEeeaF4KtOHYPVg" version="Latest" type="property"/>
+    </ItemsRelations>
+    <ItemsRelations xmi:id="_f_TR4KMzEeet6YH06skt2A">
+      <baseItem xmi:id="_f_TR4aMzEeet6YH06skt2A" id="_dl8agJ8lEeeJLJILu0UrZw" version="0.1" type="job"/>
+      <relatedItems xmi:id="_f_TR4qMzEeet6YH06skt2A" id="_xF2QYJwSEeevSfDK6QoZaQ" version="Latest" type="context"/>
+      <relatedItems xmi:id="_f_TR46MzEeet6YH06skt2A" id="_Ihes4J2eEeepddv4c48Ucw" version="Latest" type="context"/>
+      <relatedItems xmi:id="_f_TR5KMzEeet6YH06skt2A" id="_XElGYJEbEee8WO8wvmXhvw" version="Latest" type="context"/>
+      <relatedItems xmi:id="_f_TR5aMzEeet6YH06skt2A" id="_eJ_tcJ2eEeepddv4c48Ucw" version="Latest" type="context"/>
+      <relatedItems xmi:id="_f_TR5qMzEeet6YH06skt2A" id="_a4XTsZ2VEeepddv4c48Ucw" version="Latest" type="job"/>
+      <relatedItems xmi:id="_f_TR56MzEeet6YH06skt2A" id="SQLike" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_f_TR6KMzEeet6YH06skt2A" id="Numeric" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_f_TR6aMzEeet6YH06skt2A" id="TalendString" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_f_TR6qMzEeet6YH06skt2A" id="DataMasking" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_f_TR66MzEeet6YH06skt2A" id="ImporttweetsTstandardizerow_1" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_f_TR7KMzEeet6YH06skt2A" id="DataOperation" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_f_TR7aMzEeet6YH06skt2A" id="DqStringHandling" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_f_TR7qMzEeet6YH06skt2A" id="StringHandling" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_f_TR76MzEeet6YH06skt2A" id="TalendDataGenerator" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_f_TR8KMzEeet6YH06skt2A" id="TalendDate" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_f_TR8aMzEeet6YH06skt2A" id="DataQuality" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_f_TR8qMzEeet6YH06skt2A" id="Tweets_Generator" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_f_TR86MzEeet6YH06skt2A" id="Mathematical" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_f_TR9KMzEeet6YH06skt2A" id="Relational" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_f_TR9aMzEeet6YH06skt2A" id="DQTechnical" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_f_TR9qMzEeet6YH06skt2A" id="DataQualityDependencies" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_f_TR96MzEeet6YH06skt2A" id="MDM" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_f_TR-KMzEeet6YH06skt2A" id="Importtweets_deployTstandardizerow_1" version="Latest" type="routine"/>
     </ItemsRelations>
     <migrationTask xmi:id="_A-Ed8J7fEeeE5por0IoA7Q" id="org.talend.repository.localprovider.RemoveRoutineFolderTask" breaks="5.1.1" version="5.1.2" status="noimpact"/>
     <migrationTask xmi:id="_A-FFAJ7fEeeE5por0IoA7Q" id="org.talend.repository.localprovider.model.migration.ChangeXmiSerialization" breaks="5.1.1" version="5.1.2" status="noimpact"/>
