Create process item 'Oodle_Data_Flow' at path '' in project 'oodle_git'     Delete items...       Delete (physical) process item 'S3_T0_HDFS' at path '' in project 'oodle_git'         Save project 'oodle_git'

--- a/OODLE_GIT/talend.project
+++ b/OODLE_GIT/talend.project
@@ -178,32 +178,6 @@
       <relatedItems xmi:id="_zH_6c6IdEeewh9d2QGnGHQ" id="Importtweets_deployTstandardizerow_1" version="Latest" type="routine"/>
       <relatedItems xmi:id="_2pC_QKIdEeewh9d2QGnGHQ" id="_a6cKMKIdEeewh9d2QGnGHQ" version="Latest" type="job"/>
     </ItemsRelations>
-    <ItemsRelations xmi:id="_GKF9kKJmEee2eumRGMQQBw">
-      <baseItem xmi:id="_GKF9kaJmEee2eumRGMQQBw" id="_d_dAcJ2VEeepddv4c48Ucw" version="0.1" type="job"/>
-      <relatedItems xmi:id="_GKF9kqJmEee2eumRGMQQBw" id="_xF2QYJwSEeevSfDK6QoZaQ" version="Latest" type="context"/>
-      <relatedItems xmi:id="_GKF9k6JmEee2eumRGMQQBw" id="_Ihes4J2eEeepddv4c48Ucw" version="Latest" type="context"/>
-      <relatedItems xmi:id="_GKF9lKJmEee2eumRGMQQBw" id="_XElGYJEbEee8WO8wvmXhvw" version="Latest" type="context"/>
-      <relatedItems xmi:id="_GKF9laJmEee2eumRGMQQBw" id="_eJ_tcJ2eEeepddv4c48Ucw" version="Latest" type="context"/>
-      <relatedItems xmi:id="_GKF9lqJmEee2eumRGMQQBw" id="_zOshYJtQEeeaF4KtOHYPVg" version="Latest" type="property"/>
-      <relatedItems xmi:id="_GKF9l6JmEee2eumRGMQQBw" id="SQLike" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_GKF9mKJmEee2eumRGMQQBw" id="Numeric" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_GKF9maJmEee2eumRGMQQBw" id="TalendString" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_GKF9mqJmEee2eumRGMQQBw" id="DataMasking" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_GKF9m6JmEee2eumRGMQQBw" id="ImporttweetsTstandardizerow_1" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_GKF9nKJmEee2eumRGMQQBw" id="DataOperation" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_GKF9naJmEee2eumRGMQQBw" id="DqStringHandling" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_GKF9nqJmEee2eumRGMQQBw" id="StringHandling" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_GKF9n6JmEee2eumRGMQQBw" id="TalendDataGenerator" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_GKF9oKJmEee2eumRGMQQBw" id="TalendDate" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_GKF9oaJmEee2eumRGMQQBw" id="DataQuality" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_GKF9oqJmEee2eumRGMQQBw" id="Tweets_Generator" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_GKF9o6JmEee2eumRGMQQBw" id="Mathematical" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_GKF9pKJmEee2eumRGMQQBw" id="Relational" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_GKF9paJmEee2eumRGMQQBw" id="DQTechnical" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_GKF9pqJmEee2eumRGMQQBw" id="DataQualityDependencies" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_GKF9p6JmEee2eumRGMQQBw" id="MDM" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_GKF9qKJmEee2eumRGMQQBw" id="Importtweets_deployTstandardizerow_1" version="Latest" type="routine"/>
-    </ItemsRelations>
     <ItemsRelations xmi:id="_-sC0AKLbEees8enMvX5q-w">
       <baseItem xmi:id="_-sC0AaLbEees8enMvX5q-w" id="_1da9wKLaEees8enMvX5q-w" version="0.1" type="job"/>
       <relatedItems xmi:id="_-sC0AqLbEees8enMvX5q-w" id="SQLike" version="Latest" type="routine"/>
@@ -252,6 +226,33 @@
       <relatedItems xmi:id="_f_TR9qMzEeet6YH06skt2A" id="DataQualityDependencies" version="Latest" type="routine"/>
       <relatedItems xmi:id="_f_TR96MzEeet6YH06skt2A" id="MDM" version="Latest" type="routine"/>
       <relatedItems xmi:id="_f_TR-KMzEeet6YH06skt2A" id="Importtweets_deployTstandardizerow_1" version="Latest" type="routine"/>
+    </ItemsRelations>
+    <ItemsRelations xmi:id="_gW_ZIKMzEeet6YH06skt2A">
+      <baseItem xmi:id="_gW_ZIaMzEeet6YH06skt2A" id="_a4XTsJ2VEeepddv4c48Ucw" version="0.1" type="job"/>
+      <relatedItems xmi:id="_gW_ZIqMzEeet6YH06skt2A" id="_xF2QYJwSEeevSfDK6QoZaQ" version="Latest" type="context"/>
+      <relatedItems xmi:id="_gW_ZI6MzEeet6YH06skt2A" id="_Ihes4J2eEeepddv4c48Ucw" version="Latest" type="context"/>
+      <relatedItems xmi:id="_gW_ZJKMzEeet6YH06skt2A" id="_XElGYJEbEee8WO8wvmXhvw" version="Latest" type="context"/>
+      <relatedItems xmi:id="_gW_ZJaMzEeet6YH06skt2A" id="_eJ_tcJ2eEeepddv4c48Ucw" version="Latest" type="context"/>
+      <relatedItems xmi:id="_gW_ZJqMzEeet6YH06skt2A" id="_a4XTsZ2VEeepddv4c48Ucw" version="0.1" type="job"/>
+      <relatedItems xmi:id="_gW_ZJ6MzEeet6YH06skt2A" id="_d_dAcJ2VEeepddv4c48Ucw" version="Latest" type="job"/>
+      <relatedItems xmi:id="_gW_ZKKMzEeet6YH06skt2A" id="SQLike" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_gW_ZKaMzEeet6YH06skt2A" id="Numeric" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_gW_ZKqMzEeet6YH06skt2A" id="TalendString" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_gW_ZK6MzEeet6YH06skt2A" id="DataMasking" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_gW_ZLKMzEeet6YH06skt2A" id="ImporttweetsTstandardizerow_1" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_gW_ZLaMzEeet6YH06skt2A" id="DataOperation" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_gW_ZLqMzEeet6YH06skt2A" id="DqStringHandling" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_gW_ZL6MzEeet6YH06skt2A" id="StringHandling" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_gW_ZMKMzEeet6YH06skt2A" id="TalendDataGenerator" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_gW_ZMaMzEeet6YH06skt2A" id="TalendDate" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_gW_ZMqMzEeet6YH06skt2A" id="DataQuality" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_gW_ZM6MzEeet6YH06skt2A" id="Tweets_Generator" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_gW_ZNKMzEeet6YH06skt2A" id="Mathematical" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_gW_ZNaMzEeet6YH06skt2A" id="Relational" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_gW_ZNqMzEeet6YH06skt2A" id="DQTechnical" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_gW_ZN6MzEeet6YH06skt2A" id="DataQualityDependencies" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_gW_ZOKMzEeet6YH06skt2A" id="MDM" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_gW_ZOaMzEeet6YH06skt2A" id="Importtweets_deployTstandardizerow_1" version="Latest" type="routine"/>
     </ItemsRelations>
     <migrationTask xmi:id="_A-Ed8J7fEeeE5por0IoA7Q" id="org.talend.repository.localprovider.RemoveRoutineFolderTask" breaks="5.1.1" version="5.1.2" status="noimpact"/>
     <migrationTask xmi:id="_A-FFAJ7fEeeE5por0IoA7Q" id="org.talend.repository.localprovider.model.migration.ChangeXmiSerialization" breaks="5.1.1" version="5.1.2" status="noimpact"/>
